test-framework/sudo-compliance-tests/src/sudo/flag_list/long_format/snapshots/passwd.snap
---
source: sudo-compliance-tests/src/sudo/flag_list/long_format/mod.rs
expression: stdout
---
Matching Defaults entries for root on container:
    !fqdn, !lecture, !mailerpath

User root may run the following commands on container:

Sudoers entry:
    RunAsUsers: root
    Options: authenticate
    Commands:
	/usr/bin/true
