test-framework/sudo-compliance-tests/src/sudo/flag_list/long_format/snapshots/passwd_nopasswd_override.snap
---
source: sudo-compliance-tests/src/sudo/flag_list/long_format/mod.rs
expression: stdout
---
User root may run the following commands on container:

Sudoers entry:
    RunAsUsers: root
    Options: authenticate
    Commands:
	/usr/bin/true

Sudoers entry:
    RunAsUsers: root
    Options: !authenticate
    Commands:
	/usr/bin/false
